css/gifts.css
html {
  scroll-behavior: smooth;
}

body {
  max-width: 1440px;
  margin: auto;
}

main {
  background-color: #FF4646;
  border-radius: 20px;
  background-image: url('../assets/images/bg-garland.png');
  background-repeat: repeat-x;
  background-position: top center;
  background-size: 100% auto;
}

/* Header Styles */
.active_gift_btn {
  background-color: rgba(255, 70, 70, 0.1);
  color: #FF4646;
  border-radius: 12px;
  cursor: default;
}

/* Gifts Styles */
.gifts {
  padding: 60px 0;
}

.gifts_container {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: white;
  gap: 20px;
}

h1 {
  text-align: center;
  width: 426px;
}

.tabs {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 8px;
}

.active_filter_btn {
  background-color: rgba(255, 255, 255, 0.2);
  padding: 12px 20px;
  border-radius: 12px;
  cursor: default;
}

.filter_btn {
  cursor: pointer;
  padding: 12px 20px;
  border-radius: 12px;
  transition: all .5s ease;
}

.filter_btn:hover {
  background-color: rgba(255, 255, 255, 0.2);
}

.gifts_cards {
  display: grid;
  grid-template-columns: repeat(4, 310px);
  grid-template-rows: repeat(3, 342px);
  grid-gap: 12px;
}

.gift_card {
  background-color: #ecf3f8;
  border-radius: 20px;
  color: black;
  height: 342px;
  width: 310px;
  text-align: left;
  transition: all .5s ease;
  cursor: pointer;
  box-sizing: border-box;
}

.gift_card_header {
  background-color: white;
  border-radius: 20px;
  padding: 17px 20px;
  display: flex;
  gap: 10px;
  flex-direction: column;
  height: 78px;
}

.gift_card .font_h3 {
  transition: color 0.5s ease;
}

.gift_card:hover .font_h3 {
  color: #FF4646;
}

/* Go Top Button */
.go-top {
  position: fixed;
  right: 8px;
  bottom: 8px;
  display: none;
  z-index: 1000;
  transition: all .5s ease;
}

.show {
  display: block;
}

/* Popup Card */
.dialog {
  min-width: 364px;
  height: 514px;
  border-radius: 20px;
  border: none;
  padding: 0;
  background-color: #ecf3f8;
  z-index: 1002;
}

dialog::backdrop {
  background: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(5px);
  z-index: 1001;
  position: fixed;
  
}

.modal-close {
  padding: 12px;
  position: absolute;
  right: 0;
}

.dialog_inner {
  max-width: 400px;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 514px;
}

.description {
  height: 284px;
  width: 100%;
  background-color: white;
  border-radius: 20px;
  padding: 20px 20px;
  display: flex;
  flex-direction: column;
  gap: 20px;
  box-sizing: border-box;
}

.description_container {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.description_container_superpowers {
  display: flex;
  flex-direction: column;
  gap: 8px;
  height: 120px;
}

.stat_container {
  display: flex;
  flex-direction: row;
  gap: 12px;
  align-items: center;
}

.stat_container .first_p {
  width: 50%;
}

.stars_container {
  display: flex;
  gap: 8px;
}

.modal-open {
  overflow: hidden;
  width: 100%;
  inset: 0;
  touch-action: none;
}

@media (width >= 768px) and (width < 1440px ) {
  .gifts_cards {
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 12px;
  }
}

@media (width >= 380px) and (width < 768px ) {
  /* Gifts Section */
  h1 {
    width: 364px;
  }

  /* Tabs */
  .tabs {
    width: 354px;
    height: 40px;
  }

  .tabs .tab:nth-child(1) p {
    width: 25px;
    height: 16px;
  }

  .tabs .tab:nth-child(2) p {
    width: 76px;
    height: 16px;
  }

  .tabs .tab:nth-child(3) p {
    width: 86px;
    height: 16px;
  }

  .tabs .tab:nth-child(4) p {
    width: 103px;
    height: 16px;
  }

  .active_filter_btn {
    padding: 12px 8px;
  }

  .filter_btn {
    padding: 12px 3px;
  }

  .gifts_cards {
    grid-template-columns: 1fr;
    grid-gap: 12px;
  }

  /* Footer Section */
  .footer_container {
    padding-top: 60px
  }
}

